--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -34,5 +34,6 @@
   "Dice value": "Значение кубика",
   "Dice value: {}": "Значение кубика: {}",
   "cancel to random": "отмена для случайного",
-  "Runes": "Руны"
+  "Runes": "Руны",
+  "Events": "События"
 }
